@@ -205,6 +205,17 @@ one device.
 </para></listitem>
 </varlistentry>
 
+<varlistentry condition="lenny">
+<term>lowmem</term>
+<listitem><para>
+
+Can be used to force the installer to a lowmem level higher than the one
+the installer sets by default based on available memory. Possible values
+are 1 and 2. See also <xref linkend="lowmem"/>.
+
+</para></listitem>
+</varlistentry>
+
 <varlistentry>
 <term>debian-installer/framebuffer (fb)</term>
 <listitem><para>
