@@ -52,5 +52,11 @@ larger swap doesn't help, try creating the file system as ext2 (which
 is an essential component of the installer) instead. It is possible to
 change an ext2 partition to ext3 after the installation.
 
+</para><para condition="lenny">
+
+It is possible to force the installer to use a higher lowmem level than
+the one based on available memory by using the boot parameter
+<quote>lowmem</quote> as described in <xref linkend="installer-args"/>.
+
 </para>
    </sect3>
