@@ -17,11 +17,12 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   * Add translatable entities for Continue, Cancel and Go Back buttons.
   * Add build dependencies on texlive-lang-* packages for languages for which
     the manual has translations.
+  * Document new boot parameter "lowmem".
 
   [ Joey Hess ]
   * Document new lilo-installer/skip preseed.
 
- -- Frans Pop <fjp@debian.org>  Mon,  4 Jun 2007 16:43:39 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 06 Jun 2007 00:18:49 +0200
 
 installation-guide (20070319) unstable; urgency=low
 
